--- a/fontendv1.1/package.json
+++ b/fontendv1.1/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^1.0.0-beta6",
     "moment": "^2.29.1",
+    "password-validator": "^5.1.1",
     "react": "^17.0.2",
     "react-agenda": "^0.0.8",
     "react-cookie": "^4.0.3",
