--- a/fontendv1.1/package.json
+++ b/fontendv1.1/package.json
@@ -26,6 +26,7 @@
     "react-cookie": "^4.0.3",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-grid-gallery": "^0.5.5",
     "react-jitsi": "^1.0.4",
     "react-jquery-plugin": "^1.1.7",
     "react-jutsu": "^3.0.3",
