--- a/fontendv1.1/package.json
+++ b/fontendv1.1/package.json
@@ -36,6 +36,8 @@
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.3",
+    "react-select": "^5.0.0",
+    "react-select-country-list": "^2.2.3",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
